syntax = "proto3";
package greeter;

import "google/api/annotations.proto";

// The greeting service definition
service GreeterService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      post: "/api/greeter/say-hello"
      body: "*"
    };
  };
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greeting
message HelloResponse {
  string message = 1;
}